test/data/semantic-errors/expression-not-boolean.ava
var x = 0;

while (x + 2) { x++; };